<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_ModuleMachineInterface_IN" Id="{127400f9-b735-4ad1-ae8b-f4c706320bb5}">
    <Declaration><![CDATA[TYPE ST_ModuleMachineInterface_IN :
STRUCT
  // Inputs (from machine)
  bEStop                  : BOOL;             // EStop active
  bSleep                  : BOOL;             // Sleep active
  bShutdown               : BOOL;             // Shutdown active
  bMachineCommErr         : BOOL;             // Machine communication error
  bSafetyCoverOk          : BOOL;             // Safety cover OK (closed)
  bServiceDoorsOk         : BOOL;             // Safety Doors OK (closed)
  bSafetyOk               : BOOL;             // generic safety hardware ok
  bDriftControlError      : BOOL;             // (obsolete) remove?
  bDriftControlMissMarks  : BOOL;             // (obsolete) remove?
  
  // new
  bUnitInPrintPosition    : BOOL;             // Print module in print position
  bUnitInMaintPosition    : BOOL;             // Print module in maintenance position
  bUnitInCappingPosition  : BOOL;             // Print module in capping position
  bEngaged                : BOOL;             // Print module engaged
  bPrintActivated         : BOOL;             // Printing enabled (PrintON)
  bStopRequest            : BOOL;             // Synced print stop, finish printing current actual repeat
  bFastStopRequest        : BOOL;             // Fast print stop request
  bPrintDirection         : BOOL;             // normal = 0, reverse = 1
  
  // other
  fSubstrateThickness     : LREAL := 0.000_1; // Substrate thickness [m]
  fSubstrateLen           : LREAL;            // Substrate length [m]
  fWebStretchCalculated   : LREAL;            // Web strech factor converted
  fLateralRegister        : LREAL;            // Lateral regster [m]
  fDistanceToPrevModule   : LREAL;            // Distance to previous PrintModule [m] (dist to prev mark sensor, which is pm reference pos) 
  fInspectionDistToPrint  : LREAL;            // Inspection distance to PrintModule [m}
  bTargetSpeedReached     : BOOL;             // Target speed reached
  fTargetSpeed            : LREAL;            // Target speed [m/s]
  bPrintMarkExist         : BOOL;             // Print markus exist
  fMarkToPrintdataCenterY : LREAL;            // mark distance from print data center Y [m]
  fMarkBaseSize           : LREAL;            // mark base "a" size (square side) [m]
  fMarkDistToStartMark    : LREAL;            // mark distance repeat to start mark [m}
  nUsePerRepeatInLine     : UDINT;            // Number of Uses per Repead in printing direction
  
  fEncoderResolution      : LREAL;            // Effective Encoder resolution to be used [pulse/um]
  fEncoderDetectPulseMin  : LREAL;            // Encoder step measurement minimum pulse 
  fEncoderDetectPulseMax  : LREAL;            // Encoder step measurement maximum pulse
  nEncoderDetectFilterSz  : UDINT;            // Mean filter size for measured encoder pulse output
  
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>